// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render correctly the LoginForm component 1`] = `
<div
  className="divStyle"
>
  <h1
    className="title"
  >
     this.jobs
  </h1>
  <form
    className="LoginForm"
    id="loginForm"
  >
    <div
      className="FormComp w-50"
    >
      <input
        className="inpBox form-control"
        id="formEmail"
        onChange={[Function]}
        placeholder="Email Address"
        type="email"
      />
    </div>
    <div
      className="FormComp w-50"
      onChange={[Function]}
    >
      <input
        className="FormComp inpBox form-control"
        id="formPassword"
        placeholder="Password"
        type="password"
      />
    </div>
    <div
      className="FormComp"
      data-testid="formSubmit"
    >
      <button
        className="buttonStyle btn btn-primary"
        data-testid="login"
        disabled={false}
        id="loginButton"
        onClick={[Function]}
        type="button"
      >
        Login
      </button>
      <button
        className="buttonStyle btn btn-primary"
        data-testid="reg"
        disabled={false}
        id="registrationButton"
        onClick={[Function]}
        type="button"
      >
        Register
      </button>
    </div>
  </form>
</div>
`;

exports[`render correctly the LoginPage component 1`] = `
<div
  className="LoginPage"
  data-testid="LoginPage"
>
  <div
    className="divStyle"
    data-testid="loginForm"
  >
    <h1
      className="title"
    >
       this.jobs
    </h1>
    <form
      className="LoginForm"
      id="loginForm"
    >
      <div
        className="FormComp w-50"
      >
        <input
          className="inpBox form-control"
          id="formEmail"
          onChange={[Function]}
          placeholder="Email Address"
          type="email"
        />
      </div>
      <div
        className="FormComp w-50"
        onChange={[Function]}
      >
        <input
          className="FormComp inpBox form-control"
          id="formPassword"
          placeholder="Password"
          type="password"
        />
      </div>
      <div
        className="FormComp"
        data-testid="formSubmit"
      >
        <button
          className="buttonStyle btn btn-primary"
          data-testid="login"
          disabled={false}
          id="loginButton"
          onClick={[Function]}
          type="button"
        >
          Login
        </button>
        <button
          className="buttonStyle btn btn-primary"
          data-testid="reg"
          disabled={false}
          id="registrationButton"
          onClick={[Function]}
          type="button"
        >
          Register
        </button>
      </div>
    </form>
  </div>
</div>
`;
